# NullGate

./: CMakeLists.txt  README.md
include/nullgate/: obfuscation.hpp  syscalls.hpp
include/sample/: ntapi.hpp
src/hasher/: hasher.cpp
src/nullgate/: obfuscation.cpp  syscalls.S  syscalls.cpp  syscalls_masm.asm
src/sample/: sample.cpp
tests/: CMakeLists.txt  xor.cpp
